--- a/requirements.txt
+++ b/requirements.txt
@@ -12,11 +12,13 @@ Flask-Script==2.0.6
 Flask-SQLAlchemy==3.1.1
 Flask-WTF==1.2.2
 greenlet==3.1.1
+gunicorn==23.0.0
 idna==3.10
 itsdangerous==2.2.0
 Jinja2==3.1.5
 Mako==1.3.9
 MarkupSafe==3.0.2
+packaging==24.2
 SQLAlchemy==2.0.38
 typing_extensions==4.12.2
 Werkzeug==3.1.3
