--- a/requirements.txt
+++ b/requirements.txt
@@ -23,3 +23,9 @@ SQLAlchemy==2.0.38
 typing_extensions==4.12.2
 Werkzeug==3.1.3
 WTForms==3.2.1
+python-dotenv==1.0.0
+psycopg2-binary==2.9.9
+Flask-Bcrypt==1.0.1
+Flask-CORS==4.0.0
+Flask-Testing==0.8.1
+pytest==8.0.0
