--- a/requirements.txt
+++ b/requirements.txt
@@ -2,24 +2,26 @@ alembic==1.14.1
 blinker==1.9.0
 click==8.1.8
 colorama==0.4.6
-dnspython==2.7.0
-email_validator==2.2.0
 Flask==3.1.0
-Flask-Login==0.6.3
-Flask-Mail==0.10.0
-Flask-Migrate==3.1.0
-Flask-Script==2.0.6
+Flask-Migrate==4.1.0
 Flask-SQLAlchemy==3.1.1
-Flask-WTF==1.2.2
 greenlet==3.1.1
-gunicorn==23.0.0
-idna==3.10
 itsdangerous==2.2.0
 Jinja2==3.1.5
 Mako==1.3.9
 MarkupSafe==3.0.2
-packaging==24.2
 SQLAlchemy==2.0.38
 typing_extensions==4.12.2
 Werkzeug==3.1.3
+psycopg2-binary==2.9.9
+flask-mail==0.9.1
+Flask-WTF==1.2.1
+dnspython==2.7.0
+email_validator==2.2.0
+Flask-Login==0.6.3
+Flask-Script==2.0.6
+Flask-WTF==1.2.2
+gunicorn==23.0.0
+idna==3.10
+packaging==24.2
 WTForms==3.2.1
