fix: tweak devcontainer settings

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -3,8 +3,12 @@
   "dockerFile": "../ci.Dockerfile",
   "workspaceFolder": "/workspace",
   "runArgs": ["--init", "--cap-add=SYS_ADMIN"],
-  "settings": {
-    "terminal.integrated.defaultProfile.linux": "bash"
+  "customizations": {
+    "vscode": {
+      "settings": {
+        "terminal.integrated.defaultProfile.linux": "bash"
+      }
+    }
   },
   "postCreateCommand": "npm ci",
   "remoteEnv": {
